Closed Bug 407201 Opened 17 years ago Closed 17 years ago

Not dropping references for one shot timers on Fire()

Categories

(Core :: XPCOM, defect, P1)

x86
All
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: sayrer, Assigned: sayrer)

References

Details

(Keywords: memory-leak)

Attachments

(1 file)

Bruno Calvignac discovered this in bug 330128.
Attached patch bruno's solutionSplinter Review
Attachment #292237 - Flags: superreview?(bzbarsky)
Attachment #292237 - Flags: review?(bzbarsky)
Attachment #292237 - Attachment is patch: true
Attachment #292237 - Attachment mime type: application/octet-stream → text/plain
Comment on attachment 292237 [details] [diff] [review] bruno's solution r+sr=bzbarsky
Attachment #292237 - Flags: superreview?(bzbarsky)
Attachment #292237 - Flags: superreview+
Attachment #292237 - Flags: review?(bzbarsky)
Attachment #292237 - Flags: review+
Summary: Not dropping references for one shot timers on Cancel() → Not dropping references for one shot timers on Fire()
Keywords: mlk
Flags: blocking1.9+
sayrer, checkin-needed?
Version: unspecified → Trunk
Priority: -- → P1
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Depends on: 419292
It looks like this caused bug 419292
No longer depends on: 419292
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: