Bug 407201. Not dropping references for one shot timers on Fire. r/sr=bzbarsky